Closed Bug 1267889 Opened 10 years ago Closed 10 years ago

Always steal the error result in `PushMessage::Json`

Categories

(Core :: DOM: Push Subscriptions, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: lina, Assigned: lina)

References

Details

(Whiteboard: btpp-active)

Attachments

(1 file)

Otherwise, we'll trip this assertion in ErrorResult, even if ConsumeJson doesn't throw any JS exceptions: https://dxr.mozilla.org/mozilla-central/rev/fc15477ce628599519cb0055f52cc195d640dc94/dom/bindings/ErrorResult.h#102-103,105
Attachment #8745802 - Flags: review?(dd.mozilla)
Blocks: 1201335
Attachment #8745802 - Flags: review?(dd.mozilla) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: