Bug 1267889 - Always steal the error result in `PushMessage::Json`. r=dragana

MozReview-Commit-ID: FOpIoIYBCFW

--HG--
extra : rebase_source : b58a1e9a9199ec781afb7a1dde77b250711d8510
extra : amend_source : b2cb82443ee0022f036d318d33e16f3de0ecf406